# Darxi

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  run_docker.sh
resources/: resources.qrc
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/controllers/: authcontroller.cpp  authcontroller.h  dashboardcontroller.cpp  dashboardcontroller.h
src/database/: databasemanager.h
src/models/: user.cpp  user.h
src/models/database/: databasemanager.cpp
src/views/: dashboardview.cpp  dashboardview.h  loginview.cpp  loginview.h  mainwindow.cpp  mainwindow.h  signupview.cpp  signupview.h
